fixed join link & changed description

--- a/popover.html
+++ b/popover.html
@@ -228,6 +228,6 @@
 		<iframe id="ipopover" onload="showLoader(false)"></iframe>
 		<div id="icon-hider"><a href="#" onclick="openLinkInNewTab('http://www.delicious.com');">Go to delicious</a></div>
 		<div id="loading-div"><img id="loading-icon" src="loading.gif" /></div>
-		<div id="join-link"><p><a href="#" onclick="openLinkInNewTab('http://www.delicious.com/register');">Join Delicious.</a></p></div>
+		<div id="join-link" style="visibility:hidden;"><p><a href="#" onclick="openLinkInNewTab('http://www.delicious.com/register');">Join Delicious.</a></p></div>
 	</body>
 </html>
